<resources>
    <string name="app_name">Oreo Wifi HotSpot</string>


    <string name="intent_action_turnon">com.fitc.wifihotspot.TURN_ON</string>
    <string name="intent_action_turnoff">com.fitc.wifihotspot.TURN_OFF</string>

    <string name="intent_data_scheme">wifihotspot</string>
    <string name="intent_data_host_turnon">turnon</string>
    <string name="intent_data_host_turnoff">turnoff</string>
    <string name="on_uri"><a href="wifihotspot://turnon">wifihotspot://turnon</a></string>
    <string name="off_uri"><a href="wifihotspot://turnoff">wifihotspot://turnoff</a></string>

    <string name="turnon_button">Turn On</string>
    <string name="turnoff_button">Turn Off</string>
    <string name="dummy_content">NOTE TO\nTHE UNINITIATED</string>

    <string name="notification_chnnl">Hot Spot</string>
    <string name="notification_chnnl_location_descr">Keeps wifi hot spot persistent</string>

    <string name="needpermissions">com.fitc.wifihotspot.NEED_PERMISSION</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="actions_note">Send an (Implicit )Intent with an actions below in bold. Note that in OREO this is no longer as trivial as it used to be. <a href="http://www.floatingintheclouds.com/app-wifi-hot-spot-on-oreo/">More info here</a>.</string>
    <string name="instructions"><a href="http://www.floatingintheclouds.com/app-wifi-hot-spot-on-oreo/">INSTRUCTIONS</a></string>
    <string name="toggle_hotspot_with_actions">Toggle HotSpot With Actions</string>
    <string name="test_on_with_action">Test: On with Action</string>
    <string name="toggle_hotspot_with_data">Toggle HotSpot With Data</string>
    <string name="test_off_with_action">Test: Off with Action</string>

</resources>
